Fix enabling/disabling of checkboxes in the user menu dialog

Also improve the documentation of the user menu a little.

Patch by Fritz Meier

BUG: 373301